# EcoSort

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
res/: CMakeLists.txt
res/Models/: ShortConveyor.mtl  ShortConveyor.obj.mtl
res/Shaders/: final.frag  forward.frag  forward.vert  gbuffer.frag  lighting.frag  lighting.vert  test.vs
res/Shaders/Debug/: showlights.frag  showlights.vert
res/Shaders/GUI/: gui.frag  gui.vert
res/Shaders/Scene/Deferred/: final.frag  final.vert  gbuffer.frag  gbuffer.vert  lighting.frag
res/Shaders/Testing/: forward.frag  forward.vert  test.frag  test.vert
src/: AssetFetcher.cpp  AssetFetcher.h  Game.cpp  Game.h  main.cpp
src/Graphics/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Interface/: Interface.cpp  Interface.h  Logger.h  Logger.tpp  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/Scene/: Components.cpp  Components.h  Object.cpp  Object.h  Scene.cpp  Scene.h
web/: index.html  leaderboard.html  package.json  style.css
web/api/: .gitignore  docker-compose.yml  local-start.sh  package-lock.json  package.json  server.js
web/api/prisma/: schema.prisma
web/api/prisma/migrations/20250613011432_init/: migration.sql
